# bbox-demo

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
app/: app.py  config.js  index.html  package-lock.json  package.json  vite.config.js
app/public/: config.js  fwa_index.json
app/src/: App.jsx  DataSelectionTable.jsx  InteractionLayer.jsx  MapComponent.jsx  PointPlotter.jsx  index.css  styles.js
app/src/components/data/: DataSelection.css  DataSelectionTable.jsx
app/src/components/info/: HelpGuide.css  HelpGuide.jsx  LogoBox.css  LogoBox.jsx
app/src/components/map/: FwaNameSearch.css  FwaNameSearch.jsx  InteractionLayer.jsx  MapComponent.jsx  PointPlotter.css  PointPlotter.jsx
app/src/services/: api.js  bbox.js
app/static/: main.js
app/templates/: index.html
config/: BCAlbersCustomGrid.json  BCAlbersGrid.json  bbox.template.toml
docker/BBOX/: Dockerfile  start-bbox-server.sh
docker/PostGIS/: Dockerfile  init-postgis.sh
docker/app/: Dockerfile
docker/data-import/: Dockerfile  cleanup_import.sh  import_data.sh
