[tool.poetry]
name = "bbox-demo"
version = "0.1.0"
description = "A small Leaflet demo to visualize PostGIS vector tiles"
authors = ["Quintin <quintins@uvic.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
